--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "express": "^5.1.0",
     "globals": "^15.15.0",
+    "http-proxy-middleware": "^3.0.5",
     "vite": "^6.2.0",
     "vite-plugin-qrcode": "^0.2.4",
     "vite-plugin-svgr": "^4.3.0"
